# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Wed Jul  5 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected implementation of Connection methods getClientInfo() and
  setClientInfo(). They used to get/set Connection properties instead
  of Client Info properties which was a incorrect. MonetDB does not
  support Client Info properties.

* Thu Jun 22 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected DatabaseMetaData method getClientProperties().
  It used to return connection properties instead of client info properties.

* Thu May  4 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected DatabaseMetaData method getStringFunctions() when connected
  to Jun2023 server. It now includes the string functions from the new
  txtsim module.

* Thu Feb 23 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Compiled and released new jar files: monetdb-jdbc-3.3.jre8.jar and
  jdbcclient.jre8.jar

* Thu Feb  9 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected DatabaseMetaData.getSQLKeywords() output. It used to return
  all MonetDB SQL keywords, but now it excludes the SQL:2003 keywords
  as defined by the Java JDBC API specification.

* Thu Jan 19 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected DatabaseMetaData.getUDTs() output. It used to return rows
  for system types: inet, json, url and uuid. However those are not User
  Defined Types. Now they are no longer returned by this method.

* Thu Dec  8 2022 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- Internal method waitForPrompt() of class BufferedMCLReader has been
  renamed to discardRemainder(). The example program SQLcopyinto.java
  which uses this method, has been updated.

* Thu Nov 17 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Fixed an invalid error issue when a PreparedStatement had more than 250